--- a/tbsetup/nsverify/GNUmakefile.in
+++ b/tbsetup/nsverify/GNUmakefile.in
@@ -1,6 +1,6 @@
 #
 # EMULAB-COPYRIGHT
-# Copyright (c) 2006 University of Utah and the Flux Group.
+# Copyright (c) 2006-2010 University of Utah and the Flux Group.
 # All rights reserved.
 #
 
@@ -12,12 +12,12 @@ TESTBED_SRCDIR	= @top_srcdir@
 OBJDIR		= ../..
 SUBDIR		= tbsetup/nsverify
 
-NS_VERSION=2.29
-NS_TAR_VERSION=2.29.2
-TCLCL_VERSION=1.17
-NS_SRC_TARBALL=ns-allinone-$(NS_TAR_VERSION).tar.gz
+# XXX these need to be in synch with ns-fetch.sh
+NS_VERSION=2.34
+TCLCL_VERSION=1.19
+
+NS_SRC_TARBALL=ns-allinone-$(NS_VERSION).tar.gz
 LOCALPKGHOST	= @OUTERBOSS_NODENAME@
-PKGHOST		= www.emulab.net
 FETCH		= fetch -m
 
 include $(OBJDIR)/Makeconf
@@ -46,31 +46,9 @@ post-install:
 	chmod u+s $(INSTALL_LIBEXECDIR)/verify-ns
 
 ns-allinone-$(NS_VERSION):
-	@if test -f /share/tarballs/$(NS_SRC_TARBALL); then \
-		echo "Unpacking $(NS_SRC_TARBALL)"; \
-		tar xfz /share/tarballs/$(NS_SRC_TARBALL); \
-	else \
-		( echo "Downloading $(NS_SRC_TARBALL)"; \
-		if [ -n "$(LOCALPKGHOST)" ]; then \
-		   $(FETCH) http://$(LOCALPKGHOST)/downloads/$(NS_SRC_TARBALL);\
-		fi ; \
-		if [ ! -s $(NS_SRC_TARBALL) ]; then \
-		    $(FETCH) http://$(PKGHOST)/downloads/$(NS_SRC_TARBALL); \
-		fi ;\
-		echo "Unpacking $(NS_SRC_TARBALL)"; \
-		tar xfz $(NS_SRC_TARBALL); ) \
-	fi
+	$(SRCDIR)/ns-fetch.sh $(SRCDIR) $(NS_SRC_TARBALL) $(LOCALPKGHOST)
 
-patch-ns-$(NS_VERSION):
-	patch -d ns-allinone-$(NS_VERSION)/ns-$(NS_VERSION) \
-		< $(SRCDIR)/ns-$(NS_VERSION).patch
-	if test -e $(SRCDIR)/tclcl-$(TCLCL_VERSION).patch; then \
-		patch -d ns-allinone-$(NS_VERSION)/tclcl-$(TCLCL_VERSION) \
-			< $(SRCDIR)/tclcl-$(TCLCL_VERSION).patch; \
-	fi
-	touch $@
-
-nstb: ns-allinone-$(NS_VERSION) patch-ns-$(NS_VERSION)
+nstb: ns-allinone-$(NS_VERSION)
 	@cd $</tclcl-$(TCLCL_VERSION); \
 		./configure --with-tcl=/usr/local; \
 		$(MAKE)
@@ -79,7 +57,7 @@ nstb: ns-allinone-$(NS_VERSION) patch-ns-$(NS_VERSION)
 		$(MAKE)
 	cp $</ns-$(NS_VERSION)/ns $@
 
-control-install: nstb \
+control-install: $(LIB_STUFF) $(LIBEXEC_STUFF) nstb \
 	$(addprefix $(INSTALL_LIBDIR)/nsverify/, $(LIB_STUFF)) \
 	$(addprefix $(INSTALL_LIBEXECDIR)/nsverify/, $(LIBEXEC_STUFF) nstb)
 
@@ -104,3 +82,7 @@ $(INSTALL_DIR)/opsdir/libexec/nsverify/%: %
 	$(INSTALL) $< $@
 
 clean:
+	rm -f $(LIB_STUFF) $(LIBEXEC_STUFF) $(BOSSLIBEXEC)
+
+reallyclean:
+	rm -rf ns-allinone-$(NS_VERSION) $(NS_SRC_TARBALL)
