Disable UUID checks in AM API.
Resurrect the disabling of UUID checks that was lost in the change to
a unified protogeni-wrapper. Moved the disabling to the GeniAM module
to avoid premature loading of GeniDB in protogeni-wrapper.

--- a/protogeni/lib/GeniAM.pm.in
+++ b/protogeni/lib/GeniAM.pm.in
@@ -22,6 +22,10 @@ use lib '@prefix@/lib';
 use GeniCMV2;
 use GeniResponse;
 
+# Disable UUID checks in GeniCredential.
+use GeniCredential;
+$GeniCredential::CHECK_UUID = 0;
+
 my $API_VERSION = 1;
 
 #
