Bug fix: correct typo in subboss.frisbeelauncher

--- a/xmlrpc/emulabserver.py.in
+++ b/xmlrpc/emulabserver.py.in
@@ -4619,7 +4619,7 @@ class subboss:
 	# has permission to load the image in libosload so we don't need to
 	# check again in frisbeelauncher.  Only a subboss can make this request
 	# anyway.
-        (exitval, output) = runcommand(TBDIR + "/sbin/subboss_wrapper frisbee_launcher " + argstr)
+        (exitval, output) = runcommand(TBDIR + "/sbin/subboss_wrapper frisbeelauncher " + argstr)
 
         if exitval:
             return EmulabResponse(RESPONSE_ERROR, exitval >> 8, output=output)
