--- a/tmcd/freebsd7/GNUmakefile.in
+++ b/tmcd/freebsd7/GNUmakefile.in
@@ -1,6 +1,6 @@
 #
 # EMULAB-COPYRIGHT
-# Copyright (c) 2000-2009 University of Utah and the Flux Group.
+# Copyright (c) 2000-2010 University of Utah and the Flux Group.
 # All rights reserved.
 #
 
@@ -62,6 +62,7 @@ bincheck:
 	fi
 
 dir-install:
+	$(INSTALL) -m 755 -o root -g wheel -d $(DESTDIR)/boot
 	$(INSTALL) -m 755 -o root -g wheel -d $(SYSETCDIR)
 	$(INSTALL) -m 755 -o root -g wheel -d $(SYSETCDIR)/rc.d
 	$(INSTALL) -m 755 -o root -g wheel -d $(SYSETCDIR)/rc.conf.d
@@ -106,6 +107,8 @@ sysetc-install:	dir-install netif-emulab
 	$(INSTALL) -m 444 $(SRCDIR)/rc.conf $(SYSETCDIR)/rc.conf
 	$(INSTALL) -m 444 $(SRCDIR)/sysctl.conf $(SYSETCDIR)/sysctl.conf
 	$(INSTALL) -m 555 ./netif-emulab $(SYSETCDIR)/rc.d/netif-emulab
+	rm -f $(SYSETCDIR)/rc.early
+	$(INSTALL) -m 644 $(SRCDIR)/loader.conf $(DESTDIR)/boot/loader.conf
 
 script-install:	dir-install
 	$(INSTALL) -m 755 $(SRCDIR)/rc.freebsd $(BINDIR)/rc
