--- a/install/ports/emulab-protogeni/Makefile
+++ b/install/ports/emulab-protogeni/Makefile
@@ -2,8 +2,17 @@
 # Date created:         21 July 2009
 # Whom:                 stoller@flux.utah.edu
 
+# Need the major version number to figure out to do.
+OSMAJOR!= /usr/bin/uname -r | /usr/bin/sed -e 's/\..*//'
+OSMINOR!= /usr/bin/uname -r | /usr/bin/sed -e 's/[0-9][0-9]*\.\([0-9][0-9]*\).*/\1/'
+
 PORTNAME=	emulab-protogeni
 PORTVERSION=	1.0
+.if ${OSMAJOR} >= 7
+.if ${OSMINOR} >= 3
+PORTVERSION=	1.1
+.endif
+.endif
 CATEGORIES=	misc
 MASTER_SITES=	#none
 DISTFILES=	#none
@@ -11,6 +20,16 @@ EXTRACT_ONLY=	#none
 COMMENT=	"Meta-port for a protogeni site"
 
 MAINTAINER=	stoller@cs.utah.edu
+
+# XXX this crap should not be needed!
+.if ${PORTVERSION} == "1.1"
+PHP_VER=	5
+PERL_VER=	5.10.1
+.MAKEFLAGS+=	WITH_OPENSSL_BASE=yes
+.else
+PHP_VER=	4
+.MAKEFLAGS+=	WITH_OPENSSL_PORT=yes
+.endif
 
 #
 # We set this so that the mysql server port doesn't do name resolution
@@ -38,7 +57,7 @@ MAINTAINER=	stoller@cs.utah.edu
 # Various ports need to agree on what version of apache. Make sure this
 # agrees with what is in the emulab-ops and emulab-php4 metaports.
 #
-.MAKEFLAGS+=	APACHE_PORT=www/apache13-modssl WITH_OPENSSL_PORT=yes
+.MAKEFLAGS+=	APACHE_PORT=www/apache13-modssl
 
 #
 # This prevents any ports from trying to run interactively - some, like the
