--- a/install/ports/emulab-pubsub/Makefile
+++ b/install/ports/emulab-pubsub/Makefile
@@ -1,7 +1,7 @@
 # ports collection makefile for: emulab-pubsub
 
 PORTNAME=	pubsub
-PORTVERSION=	0.9
+PORTVERSION=	0.95
 CATEGORIES=	misc
 MASTER_SITES=	http://www.emulab.net/distributions/
 DISTFILES=      ${PORTNAME}-${PORTVERSION}.tar.gz
@@ -15,6 +15,6 @@ USE_GMAKE=	yes
 INSTALLS_SHLIB=	yes
 
 CONFLICTS=	pubsub-elvincompat-[0-9]*
-MAKE_FLAGS=	ELVIN_COMPAT=
+MAKE_FLAGS=	ELVIN_COMPAT= ELVIN_NOELVIN=1
 
 .include <bsd.port.mk>
