--- a/install/boss-install.in
+++ b/install/boss-install.in
@@ -150,10 +150,6 @@ my $TFTPD_PKG	  = "emulab-tftp-hpa-0.48";
 
 # XXX temporary for perl DBD mysql access
 my $P5DBD_PKG	  = "p5-DBD-mysql50-3.0002";
-# XXX temporary until fix dependencies in emulab-boss package
-my $PYM2_PKG	  = "py25-m2crypto-0.19.1";
-# XXX temporary until someone extracts their head from the dark regions
-my $EASYINSTALL	  = "/usr/local/bin/easy_install";
 
 #
 # Named pid file.
@@ -252,7 +248,12 @@ else {
 #
 my $BOSS_PORT = "emulab-boss-1.8";
 if ($FBSD_MAJOR > 4) {
-    if ($FBSD_MAJOR > 6) {
+    if ($FBSD_MAJOR > 7) {
+	# XXX someday...
+	$BOSS_PORT = "emulab-boss-4.0";
+    } elsif ($FBSD_MAJOR == 7 && $FBSD_MINOR > 2) {
+	$BOSS_PORT = "emulab-boss-3.1";
+    } elsif ($FBSD_MAJOR == 7) {
 	$BOSS_PORT = "emulab-boss-3.0";
     } elsif ($FBSD_MAJOR == 6 && $FBSD_MINOR > 2) {
 	$BOSS_PORT = "emulab-boss-2.1";
@@ -260,7 +261,26 @@ if ($FBSD_MAJOR > 4) {
 	$BOSS_PORT = "emulab-boss-2.0";
     }
 }
-my $PHP4_PORT = "php4-extensions-1.0";
+
+# PHP5 is the only alternative at the moment and only for newer OSes
+my $PHP_VERSION = 4;
+my $PHP_PORT = "php4-extensions-1.0";
+if ($FBSD_MAJOR > 7 || ($FBSD_MAJOR == 7 && $FBSD_MINOR > 2)) {
+    $PHP_VERSION = 5;
+    $PHP_PORT = "php5-extensions-1.3";
+}
+
+#
+# Version dependent python-fu 
+#
+my $PYM2_PKG = "py25-m2crypto-0.19.1";
+my $PY_VER = "python2.5";
+if ($FBSD_MAJOR > 7 || ($FBSD_MAJOR == 7 && $FBSD_MINOR > 2)) {
+    $PYM2_PKG = "py26-m2crypto-0.20";
+    $PY_VER = "python2.6";
+}
+# XXX temporary until someone extracts their head from the dark regions
+my $EASYINSTALL	  = "/usr/local/bin/easy_install";
 
 #
 # XXX keep 4.x ElabInElab install limping along...
@@ -444,15 +464,19 @@ Phase "ports", "Installing ports", sub {
 	    ExecQuietFatal("$ENV PKG_PATH=$packagedir $PKG_ADD $BOSS_PORT");
 	};
 	if ($FBSD_MAJOR > 4) {
-	    Phase "php4", "Installing php4 package", sub {
-		if (!ExecQuiet("$PKG_INFO -e $PHP4_PORT")) {
-		    PhaseSkip("Port already installed");
+	    Phase "php", "Installing php${PHP_VERSION} package", sub {
+		if (!ExecQuiet("$PKG_INFO -e $PHP_PORT")) {
+		    PhaseSkip("Package already installed");
 		}
 		if (!$packagedir) {
 		    PhaseSkip("No package directory provided");
 		}
+		# XXX ugh, make sure an older version is not installed
+		if ($PHP_VERSION > 4) {
+		    ExecQuiet("$PKG_DEL -f -x php4-");
+		}
 		ExecQuietFatal("$ENV PKG_PATH=$packagedir ".
-			       "     $PKG_ADD $PHP4_PORT");
+			       "     $PKG_ADD $PHP_PORT");
 	    };
 	    # XXX temporary: only needed til emulab-boss package updated
 	    Phase "tftpd", "Updating tftpd installation", sub {
@@ -494,10 +518,10 @@ Phase "ports", "Installing ports", sub {
 		};
 		if ($FBSD_MAJOR > 6) {
 		    Phase "py-m2crypto", "Installing python m2crypto package", sub {
-			my $pname = `$PKG_INFO -E 'py25-m2crypto-*' 2>/dev/null`;
+			my $pname = `$PKG_INFO -E 'py*-m2crypto-*' 2>/dev/null`;
 			chomp($pname);
 			if ($pname eq $PYM2_PKG) {
-			    PhaseSkip("py25-m2crypto already up to date");
+			    PhaseSkip("py-m2crypto already up to date");
 			}
 			if (!$packagedir) {
 			    PhaseSkip("No package directory provided");
@@ -554,7 +578,7 @@ Phase "ports", "Installing ports", sub {
     PhaseFail("Please install ports manually, since some\n of them are " .
 	      "interactive. Run: \n" .
 	      "    cd $PORTSMISCDIR/emulab-boss && make install\n" .
-	      "    cd $PORTSMISCDIR/emulab-php4 && make install\n" .
+	      "    cd $PORTSMISCDIR/emulab-php${PHP_VERSION} && make install\n" .
 	      ($PGENISUPPORT ?
 	      "    cd $PORTSMISCDIR/emulab-protogeni && make install\n" : "") .
 	      "then re-run this script.");
@@ -622,17 +646,17 @@ Phase "portfixup", "Fixing up packages", sub {
 	# package that I know will fail otherwise.
 	#
 	Phase "m2crypto-egg", "Unpacking python m2crypto .egg", sub {
-	    my $pydir = "/usr/local/lib/python2.5/site-packages";
-	    my $egg = `ls -d $pydir/M2Crypto-0.19.1-py2.5-*.egg 2>/dev/null | tail -1`;
+	    my $pydir = "/usr/local/lib/$PY_VER/site-packages";
+	    my $egg = `ls -d $pydir/M2Crypto-*-py*-*.egg 2>/dev/null | tail -1`;
 	    chomp($egg);
 	    if (! -x $EASYINSTALL) {
 		PhaseSkip("python easy_install missing");
 	    }
 	    if ($egg eq "") {
-		PhaseSkip("py25-m2crypto egg not found");
+		PhaseSkip("egg not found");
 	    }
 	    if (-d "$egg") {
-		PhaseSkip("py25-m2crypto egg already unpacked");
+		PhaseSkip("egg already unpacked");
 	    }
 	    # XXX swig must be installed for easyinstall to exit correctly
 	    Phase "swig", "Installing swig", sub {
@@ -642,7 +666,7 @@ Phase "portfixup", "Fixing up packages", sub {
 	    };
 	    ExecQuietFatal("mv $egg /var/tmp/");
 	    $egg =~ s/$pydir//;
-	    ExecQuietFatal("$EASYINSTALL -Z /var/tmp$egg");
+	    ExecQuietFatal("$EASYINSTALL -N -H None -Z /var/tmp$egg");
 	    ExecQuietFatal("mv /var/tmp$egg $pydir/$egg.bak");
 	};
     }
@@ -894,8 +918,11 @@ Phase "database", "Setting up database", sub {
 	ExecQuietFatal("$RCDIR/1.mysql-client.sh start");
 	ExecQuietFatal("$RCDIR/2.mysql-server.sh start");
 	# Give mysqld some time to start, then make sure it did
-	sleep 5;
-	ExecQuietFatal("$MYSQLADMIN ping");
+	sleep 2;
+	if (ExecQuiet("$MYSQLADMIN ping")) {
+	    sleep 5;
+	    ExecQuietFatal("$MYSQLADMIN ping");
+	}
     };
     Phase "$DBNAME", "Creating $DBNAME", sub {
 	if (!ExecQuiet("$MYSQLSHOW $DBNAME")) {
