Change call to serve_forever into a "while (1) handle_request()" loop.
In python 2.6, the implementation of serve_forever changed and it invokes
a new method, _handle_request_noblock, instead of handle_request.  The
former is not overridden by m2crypto resulting in m2crypto specific
exceptions (SSLError) not being caught.

--- a/xmlrpc/sslxmlrpc_server.py.in
+++ b/xmlrpc/sslxmlrpc_server.py.in
@@ -446,6 +446,6 @@ if not debug:
 # when we process the request cause we want to look at the cert before
 # we decide on the priv level. 
 # 
-server = MyServer(debug);
-server.serve_forever()
-
+server = MyServer(debug)
+while 1:
+    server.handle_request()
