Restore regex mods that were lost.
In the change to protogeni-wrapper the URN regexes for the AM API were
lost. The existing regexes would pick the wrong URN out of PlanetLab
certificates, getting the second urn which is a UUID (urn:uuid:)
instead of the first (urn:publicid:IDN:). The regexes have been
modified to look for "urn:publicid:" instead of just "urn:".

--- a/protogeni/xmlrpc/protogeni-wrapper.pl.in
+++ b/protogeni/xmlrpc/protogeni-wrapper.pl.in
@@ -187,8 +187,8 @@ if (exists($ENV{'SSL_CLIENT_CERT'})) {
 	XMLError(-1, "Error decoding certificate:" . $decoded->error);
     }
     foreach my $tmp (@{ $decoded->SubjectAltName }) {
-	if ($tmp =~ /^uniformResourceIdentifier=(.*)$/ ||
-	    $tmp =~ /^(urn:.*)$/) {
+	if ($tmp =~ /^uniformResourceIdentifier=(urn:publicid:.*)$/ ||
+	    $tmp =~ /^(urn:publicid:.*)$/) {
 	    $GENIURN = $ENV{'GENIURN'} = $1;
 	}
     }
