Avoid erroneous urns in PlanetLab certs.
PlanetLab has two URIs in the Subject Alternative name. The old regex
would match both, which might result in the UUID URI instead of the
URN URI. The regex was changed to look for the prefix
"URI:urn:publicid:" instead of just "URI:".

--- a/protogeni/lib/GeniCertificate.pm.in
+++ b/protogeni/lib/GeniCertificate.pm.in
@@ -535,7 +535,7 @@ sub URN($)
 	if( /^\s+X509v3 Subject Alternative Name:\s*$/ ) {
 	    $altname = 1;
 	} elsif( $altname ) {
-	    m'^\s*URI:([-!#$%()*+,./0-9:;=?@A-Z_a-z~]+)\s*$' and $urn = $1
+	    m'^\s*URI:(urn:publicid:[-!#$%()*+,./0-9:;=?@A-Z_a-z~]+)\s*$' and $urn = $1
 		foreach split( /, / );
 	    $altname = 0;
 	}
